# owt-client

./: CMakeLists.txt  owt_client.cpp  owt_signalingchannel.cpp  owt_signalingchannel.h
lib/: libboost_date_time.so.1.67.0  libboost_random.so.1.67.0  libboost_system.so.1.67.0  libsioclient.so.1  libsioclient_tls.so.1.6.0
